--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@formkit/icons": "latest",
     "@formkit/themes": "latest",
     "@formkit/vue": "latest",
+    "@twa-dev/sdk": "^8.0.2",
     "autoprefixer": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
