--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vue/tsconfig": "^0.7.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
+    "vue-router": "^4.5.1",
     "vue-tsc": "^3.0.5"
   }
 }
