--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.7.0",
+    "package.json": "^2.0.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vue-router": "^4.5.1",
