--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext ts,vue src/ --fix",
+    "format": "prettier src/ --write",
+    "stylelint": "stylelint 'src/**/*.{vue,css}' --fix"
   },
   "dependencies": {
-    "20": "^3.1.9",
+    "20": "^1.0.0",
     "@formkit/core": "latest",
     "@formkit/icons": "latest",
     "@formkit/themes": "latest",
@@ -22,8 +25,19 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.7.0",
-    "package.json": "^2.0.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-vue": "^9.19.2",
+    "package.json": "^0.0.0",
+    "prettier": "^3.1.1",
+    "stylelint": "^15.11.0",
+    "stylelint-config-recommended": "^13.0.0",
+    "stylelint-config-recommended-vue": "^1.5.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-use-nesting": "^4.1.0",
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vue-router": "^4.5.1",
