--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
-    "lint": "eslint --ext ts,vue src/ --fix",
+    "lint": "eslint ./src --fix",
     "format": "prettier src/ --write",
-    "stylelint": "stylelint 'src/**/*.{vue,css}' --fix"
+    "style": "stylelint 'src/**/*.{vue,css}' --fix"
   },
   "dependencies": {
     "20": "^1.0.0",
@@ -24,21 +24,15 @@
     "vue": "^3.5.18"
   },
   "devDependencies": {
+    "@eslint/js": "^9.37.0",
     "@vitejs/plugin-vue": "^6.0.1",
-    "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-vue": "^9.19.2",
-    "package.json": "^0.0.0",
-    "prettier": "^3.1.1",
-    "stylelint": "^15.11.0",
-    "stylelint-config-recommended": "^13.0.0",
-    "stylelint-config-recommended-vue": "^1.5.0",
-    "stylelint-config-standard": "^34.0.0",
-    "stylelint-use-nesting": "^4.1.0",
+    "eslint": "^9.37.0",
+    "eslint-plugin-vue": "^10.5.0",
+    "globals": "^16.4.0",
+    "prettier": "^3.6.2",
     "typescript": "~5.8.3",
+    "typescript-eslint": "^8.46.1",
     "vite": "^7.1.2",
     "vue-router": "^4.5.1",
     "vue-tsc": "^3.0.5"
