--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@formkit/vue": "latest",
     "@twa-dev/sdk": "^8.0.2",
     "autoprefixer": "latest",
+    "pinia": "^3.0.4",
     "postcss": "latest",
     "tailwindcss": "latest",
     "vue": "^3.5.18"
